updating extrema_finding functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,23 @@
 Package: lextremagam
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Quantify Local Extrema Using Generalized Additive Model Derivatives
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Authors@R: person("Natalie", "Dupont", email = "natalie.dupont@concordia.ca",
+  role = c("aut", "cre"))
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+  marginaleffects,
+  mgcv,
+  tidyverse
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+
