--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ LazyData: true
 Imports:
   marginaleffects,
   mgcv,
-  tidyverse
+  tidyverse,
+  dplyr,
+  tidyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
