--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,10 @@ LazyData: true
 Imports:
   marginaleffects,
   mgcv,
-  tidyverse,
   dplyr,
-  tidyr
+  gratia,
+  data.table, 
+  ggplot2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
