--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,10 @@ Imports:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
-
+VignetteBuilder: knitr
