--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ data-raw/sim/analysis_logs
 data-raw/sim/results
 data-raw/sim/results/Archive_2024-11-28.zip
 data-raw/sim/data
+data-raw/figures/
 
 
 
